# gnostr-query

./: .justfile  Cargo.toml  Makefile  README.md  dist-workspace.toml  install_script.sh  maintainers.yaml
.github/workflows/: release.yml
src/: cli.rs  lib.rs  main.rs
